--- a/zth/index.html
+++ b/zth/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.svg">
+    <link rel="icon" href="./src/assets/BaseIcons/zth.svg">
 
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
