--- a/zth/index.html
+++ b/zth/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="./src/assets/BaseIcons/zth.svg">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="./src/assets/BaseIcons/zth.svg" />
 
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZTH</title>
     <!-- <meta name="color-scheme" content="dark light"> -->
   </head>
@@ -17,5 +24,4 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
-
 </html>
