--- a/zth/index.html
+++ b/zth/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/BaseIcons/zth.svg" />
@@ -21,7 +21,8 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
     <script type="module" src="/src/main.js"></script>
+    </div>
   </body>
 </html>
