--- a/zth/index.html
+++ b/zth/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZTH</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/favicons/android-chrome-192x192.png">
+    <link rel="apple-touch-icon-precomposed"  href="/src/assets/favicons/apple-touch-icon.png">
   </head>
   <body>
     <div id="app">
